# Django-Support-Tickets

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
django_support_tickets/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_support_tickets/migrations/: 0001_initial.py
